added encoding for RouteOptions.toUrl